--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -880,7 +880,7 @@ If a GPS device is connected with your computer, &marble; displays longitude and
 			 <sect2>
 				 <title>The Help Menu</title>
 				 <para>&marble; has the common &kde; <guimenu>Help</guimenu> menu item, for more information read the section
-				 about the <ulink url="help:/fundamentals/ui.html#menus-help">Help Menu</ulink> of the &kde; Fundamentals.</para>
+				 about the <ulink url="help:/fundamentals/menus.html#menus-help">Help Menu</ulink> of the &kde; Fundamentals.</para>
 			 </sect2>
 		 </sect1>
 	 </chapter>
